# games

./: .gitignore  README.md  utala-kaos-9-rules.md
utala/kaos9/: .gitignore  CHECKPOINT.md  CLAUDE.md  Makefile  PROJECT_SUMMARY.md  README.md  UNIQUENESS_CHECK.md  activate.sh  demo_heuristic.py  demo_human.py  demo_random.py  install-hooks.sh  pyproject.toml  quality.sh  requirements.txt  run.sh  run_tests.py  setup.sh  test.sh  test_eval_harness.py  tournament.py  utala-kaos-9-rules.md  utala-kaos-9.md
utala/kaos9/.claude/commands/: audit-rules.md
utala/kaos9/archive/: .plan-mc-scaling.md  eval_mc_scaling.py  eval_mc_strategic_final.py  eval_v18_comprehensive.py
utala/kaos9/docs/: CODE_QUALITY.md  GIT_HOOKS.md  PLAY.md  TESTING.md
utala/kaos9/docs/mobile/: FLUTTER_ONNX_GUIDE.md  MOBILE_DL_DEPLOYMENT.md  MOBILE_GAME_AGENTS.md
utala/kaos9/docs/phase2/: 01_state_features.md  02_serialization.md  03_metrics.md  04_knn_basics.md  05_memory_training.md  06_td_learning.md  07_feature_engineering.md  08_linear_training.md  09_policy_gradients.md
utala/kaos9/docs/phases/: PHASE2.5_ANALYSIS.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE2_STATUS.md  PHASE3.1_ANALYSIS.md  PHASE3.1_PLAN.md  PHASE3.2.md  PHASE3.3_PLAN.md  PHASE3.3_RESULTS.md  PHASE3.4_PLAN.md  PHASE3.4_RESULTS.md  PHASE4_PLAN.md  PHASE4_VARIANT_A_RESULTS.md  PHASE5_PLAN.md
utala/kaos9/export/: CLAUDE.md  tiny_nn_f32.json
utala/kaos9/hooks/: pre-commit
utala/kaos9/scripts/: check_quality.py  sanity_cartpole.py
utala/kaos9/scripts/analysis/: analyze_linear_weights.py  feature_importance.py  (+2 more)
utala/kaos9/tests/: README.md  __init__.py  invariants.py  run_invariants.py  test_actions.py  test_agents.py  test_engine.py  test_features.py  test_replay.py  test_serialization.py  test_state.py
(+62 files in other folders)
